# my-next-job-finder

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  codeql.yml  frontend-ci.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/analyzer/: ats_checker.py  gap_finder.py  pipeline.py  prompts.py  rewriter.py
backend/app/api/: analysis.py  resume.py
backend/app/core/: config.py  db.py  dev_fake.py  llm.py
backend/app/exporter/: docx_writer.py
backend/app/models/: resume.py
backend/app/parsers/: docx_parser.py  pdf_parser.py  structurer.py
backend/tests/: conftest.py  test_analyzer.py  test_api.py  test_ats_checker.py  test_exporter.py  test_models.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/__tests__/: GapReportCard.test.tsx  SuggestionDiff.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: Dropzone.tsx  GapReportCard.tsx  SuggestionDiff.tsx
frontend/src/pages/: Review.tsx  Upload.tsx
